[gd_scene load_steps=5 format=3 uid="uid://18icxdat27p0"]

[ext_resource type="Script" path="res://scenes/player/flick_controller/flick_controller.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c0cmugsdv07rp" path="res://scenes/player/flick_controller/click_radius.png" id="2"]

[sub_resource type="Curve" id="27"]
min_value = 0.25
_data = [Vector2(0, 0.25), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="28"]
colors = PackedColorArray(0.345098, 0.345098, 0.345098, 1, 1, 1, 1, 1)

[node name="FlickController" type="Node2D"]
script = ExtResource("1")

[node name="ClickRadius" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.964706, 0.988235, 0.294118, 0.235294)
show_behind_parent = true
scale = Vector2(2, 2)
texture = ExtResource("2")

[node name="FlickLine" type="Line2D" parent="."]
z_index = 5
points = PackedVector2Array(0, 0, 0, 0)
width = 40.0
width_curve = SubResource("27")
gradient = SubResource("28")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_cancel_flick"]
